k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
      - name: postgres
        image: postgres:15

        ports:
        - containerPort: 5432
