k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: todo-app

spec:
  selector:
    app: backend
  ports:

  - port: 8000
    targetPort: 8000
    nodePort: 30007

  type: NodePort
