k8s/frontend-service.yml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todo-app

spec:
  selector:
    app: frontend

  ports:
  - port: 3000                  #service port
    targetPort: 80          #Conatiner port

  type: ClusterIP
