k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: todo-app

spec:
 selector:
   app: db

 ports:
 - port: 5432
   targetPort: 5432

 type: ClusterIP
